update movie responses
